# music-library-organizer

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  config.example.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
docs/: music-rating-ecosystem-audit.md  personal-library-curator.md  personal-pruning-policy.md
examples/: README.md
outputs/: code_provenance.md  dependency_audit.md  privacy_audit.md  release_audit.md  source_audit.md
src/music_library_organizer/: __init__.py  applier.py  cli.py  errors.py  media.py  planner.py
src/music_library_organizer/album_prune/: __init__.py  audit.py  calibration.py  calibration_webui.py  curator.py  curator_webui.py  entity_resolution.py  models.py  normalize.py  personal_policy.py  personal_signals.py  professional.py  quarantine.py  ratings.py  scanner.py  scoring.py  service.py  store.py  web_security.py  webui.py
tests/: test_album_prune.py  test_cli.py  test_curator.py  test_entity_resolution.py  test_professional_evidence.py
tests/fixtures/: entity-resolution-golden.json  golden-indie-minimal.csv
