[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "music-library-organizer"
version = "0.2.0"
description = "Plan and safely copy a local music library into a deterministic layout"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-2.0-or-later"
authors = [{name = "xqdwww"}]
dependencies = ["mutagen>=1.47,<2"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Sound/Audio",
]

[project.scripts]
music-organizer = "music_library_organizer.cli:main"

[project.optional-dependencies]
dev = ["build>=1.2,<2", "ruff>=0.12,<1"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
